--- a/wavenet_embedding.ipynb
+++ b/wavenet_embedding.ipynb
@@ -2,9 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "WARNING: The TensorFlow contrib module will not be included in TensorFlow 2.0.\n",
+      "For more information, please see:\n",
+      "  * https://github.com/tensorflow/community/blob/master/rfcs/20180907-contrib-sunset.md\n",
+      "  * https://github.com/tensorflow/addons\n",
+      "If you depend on functionality not listed there, please file an issue.\n",
+      "\n",
+      "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/magenta/models/nsynth/wavenet/masked.py:116: UniformUnitScaling.__init__ (from tensorflow.python.ops.init_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.initializers.variance_scaling instead with distribution=uniform to get equivalent behavior.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import csv\n",
@@ -291,28 +308,28 @@
     "for npy, name in zip(file_list, file_name):\n",
     "    print(npy)\n",
     "    wavenet_data = wavenet_encode(npy)\n",
-    "    stddev_wavenet = np.std(wavenet_data, axis=0)\n",
+    "    std_wavenet = np.std(wavenet_data, axis=0)\n",
     "    mean_wavenet = np.mean(wavenet_data, axis=0)\n",
     "    \n",
-    "    average_difference_wavenet = np.zeros((16,))\n",
+    "    average_difference_channels = np.zeros((16,))\n",
+    "    \n",
     "    for i in range(0, len(wavenet_data) - 2, 2):\n",
     "        temp = wavenet_data[i] - wavenet_data[i+1]\n",
-    "        average_difference_wavenet += temp\n",
-    "    average_difference_wavenet /= (len(wavenet_data) // 2)   \n",
-    "    average_difference_wavenet = np.array(average_difference_wavenet)\n",
+    "        average_difference_channels += temp\n",
+    "    average_difference_channels /= (len(wavenet_data) // 2)   \n",
+    "    average_difference_channels = np.array(average_difference_channels)\n",
     "    \n",
-    "    concat_features_wavenet = np.hstack((stddev_wavenet, mean_wavenet))\n",
-    "    concat_features_wavenet = np.hstack((concat_features_wavenet, average_difference_wavenet))\n",
+    "    concat_features_wavenet = np.hstack((std_wavenet, mean_wavenet))\n",
+    "    concat_features_wavenet = np.hstack((concat_features_wavenet, average_difference_channels))\n",
     "    \n",
     "    save_path = npy.replace('.npy', \"\") \n",
     "    print('save',concat_features_wavenet.shape)\n",
-    "    np.save(save_path+'_OK',concat_features_wavenet) #存特徵向量\n",
-    "    "
+    "    np.save(save_path+'_OK',concat_features_wavenet) #存特徵向量"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -320,88 +337,108 @@
      "output_type": "stream",
      "text": [
       "no1\n",
+      "\n",
       "YOUTH\n",
       "Bloom\n",
       "MYMYMY\n",
-      "2.830699914456322     0對1\n",
-      "2.27186095339642     0對2\n",
-      "0.8675373922773715     1對2\n",
+      "\n",
+      "2.830699914456322     YOUTH 到 Bloom\n",
+      "2.27186095339642     YOUTH 到 MYMYMY\n",
+      "0.8675373922773715     Bloom 到 MYMYMY\n",
       "================\n",
       "no2\n",
+      "\n",
       "RainySeason\n",
       "ILoveToo\n",
       "Decalcomanie\n",
-      "1.3239942531157127     0對1\n",
-      "1.8122381616397454     0對2\n",
-      "2.65248001066036     1對2\n",
+      "\n",
+      "1.3239942531157127     RainySeason 到 ILoveToo\n",
+      "1.8122381616397454     RainySeason 到 Decalcomanie\n",
+      "2.65248001066036     ILoveToo 到 Decalcomanie\n",
       "================\n",
       "no3\n",
+      "\n",
       "gogobebe\n",
       "Egotistic\n",
       "Angel\n",
-      "0.48026388253221775     0對1\n",
-      "1.788494752006492     0對2\n",
-      "1.5435984406194327     1對2\n",
+      "\n",
+      "0.48026388253221775     gogobebe 到 Egotistic\n",
+      "1.788494752006492     gogobebe 到 Angel\n",
+      "1.5435984406194327     Egotistic 到 Angel\n",
       "================\n",
       "no4\n",
+      "\n",
       "SF\n",
       "Lie\n",
       "Hollywood\n",
-      "1.0652123327911913     0對1\n",
-      "1.041392130835179     0對2\n",
-      "0.6575773697672002     1對2\n",
+      "\n",
+      "1.0652123327911913     SF 到 Lie\n",
+      "1.041392130835179     SF 到 Hollywood\n",
+      "0.6575773697672002     Lie 到 Hollywood\n",
       "================\n",
       "no5\n",
+      "\n",
       "EpikHigh-Decalcomanie\n",
       "Colde-Lovestruck\n",
       "EpikHigh-NOTHANXXX\n",
-      "1.7957430801751673     0對1\n",
-      "0.7965891389392296     0對2\n",
-      "2.0336525322391497     1對2\n",
+      "\n",
+      "1.7957430801751673     EpikHigh-Decalcomanie 到 Colde-Lovestruck\n",
+      "0.7965891389392296     EpikHigh-Decalcomanie 到 EpikHigh-NOTHANXXX\n",
+      "2.0336525322391497     Colde-Lovestruck 到 EpikHigh-NOTHANXXX\n",
       "================\n",
       "no6\n",
+      "\n",
       "Wolves\n",
       "SidetoSide\n",
       "petedavidson\n",
-      "1.6356742053229116     0對1\n",
-      "2.803708321277067     0對2\n",
-      "1.2793955245668986     1對2\n",
+      "\n",
+      "1.6356742053229116     Wolves 到 SidetoSide\n",
+      "2.803708321277067     Wolves 到 petedavidson\n",
+      "1.2793955245668986     SidetoSide 到 petedavidson\n",
       "================\n",
       "no7\n",
+      "\n",
       "wf\n",
       "ja\n",
+      "\n",
       "0.22411981138740128\n",
       "================\n",
       "no8\n",
+      "\n",
       "Old School Turntables\n",
       "Say what’s on your mind\n",
       "NO THANXXX\n",
-      "2.229191839178503     0對1\n",
-      "2.7560940029973193     0對2\n",
-      "1.2587211266927758     1對2\n",
+      "\n",
+      "2.229191839178503     Old School Turntables 到 Say what’s on your mind\n",
+      "2.7560940029973193     Old School Turntables 到 NO THANXXX\n",
+      "1.2587211266927758     Say what’s on your mind 到 NO THANXXX\n",
       "================\n",
       "no9\n",
+      "\n",
       "Break up with your girlfriend\n",
       "Conan Gray - Grow\n",
       "Roy Bliar - Grow Up\n",
-      "1.4307349515972636     0對1\n",
-      "1.0103889632938854     0對2\n",
-      "1.8629058436063843     1對2\n",
+      "\n",
+      "1.4307349515972636     Break up with your girlfriend 到 Conan Gray - Grow\n",
+      "1.0103889632938854     Break up with your girlfriend 到 Roy Bliar - Grow Up\n",
+      "1.8629058436063843     Conan Gray - Grow 到 Roy Bliar - Grow Up\n",
       "================\n",
       "no10\n",
+      "\n",
       "4224ae32a34215ee7e6e5d144dbe7f418a47e7b0\n",
       "44f4a79e49f7ffcec038573e94cdab5d1b98cda6\n",
       "6831b5cca17f371165e455369c736d0166336f36\n",
-      "2.3595061043764205     0對1\n",
-      "2.229191839178503     0對2\n",
-      "4.2395470592691575     1對2\n",
+      "\n",
+      "2.3595061043764205     4224ae32a34215ee7e6e5d144dbe7f418a47e7b0 到 44f4a79e49f7ffcec038573e94cdab5d1b98cda6\n",
+      "2.229191839178503     4224ae32a34215ee7e6e5d144dbe7f418a47e7b0 到 6831b5cca17f371165e455369c736d0166336f36\n",
+      "4.2395470592691575     44f4a79e49f7ffcec038573e94cdab5d1b98cda6 到 6831b5cca17f371165e455369c736d0166336f36\n",
       "================\n"
      ]
     }
    ],
    "source": [
     "import file_load\n",
-    "import numpy\n",
+    "import numpy as np\n",
     "npy_path = './dataset/'#dataset位置\n",
     "name = 'OK.npy' #欲讀取的檔名\n",
     "\n",
@@ -410,22 +447,27 @@
     "for c in range(len(folder_name)):\n",
     "    fi_list, fi_name, fo_list, fo_name = file_load.file_path(npy_path+'no'+str(c+1), name)\n",
     "    npy_list = []\n",
+    "    name_list = []\n",
     "    print('no'+str(c+1))\n",
+    "    print('')\n",
     "    \n",
     "    for npy, n in zip(fi_list, fi_name):\n",
     "        vec = np.load(npy)\n",
     "        npy_list.append(vec)\n",
+    "        name_list.append(n.replace('_0_OK', ''))\n",
     "        print(n.replace('_0_OK', ''))\n",
     "        \n",
-    "    if len(npy_list)==3: \n",
+    "    if len(npy_list)==3:\n",
+    "        print('')\n",
     "        dist = np.linalg.norm(npy_list[0]-npy_list[1])\n",
-    "        print(dist,'    0對1')\n",
+    "        print(dist,'    {} 到 {}'.format(name_list[0], name_list[1]))\n",
     "        dist = np.linalg.norm(npy_list[0]-npy_list[2])\n",
-    "        print(dist,'    0對2')\n",
+    "        print(dist,'    {} 到 {}'.format(name_list[0], name_list[2]))\n",
     "        dist = np.linalg.norm(npy_list[1]-npy_list[2])\n",
-    "        print(dist,'    1對2')\n",
+    "        print(dist,'    {} 到 {}'.format(name_list[1], name_list[2]))\n",
     "    \n",
     "    elif len(npy_list)==2:\n",
+    "        print('')\n",
     "        dist = np.linalg.norm(npy_list[0]-npy_list[1])\n",
     "        print(dist)\n",
     "    print(\"================\")"
